--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -16,17 +16,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="catalinaD" translatesAutoresizingMaskIntoConstraints="NO" id="feP-hA-YU6" userLabel="background">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="catalinaD" translatesAutoresizingMaskIntoConstraints="NO" id="feP-hA-YU6" userLabel="backgroundView">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Pg-33-5iI" userLabel="cloudsView">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Pg-33-5iI" userLabel="iconView">
                                 <rect key="frame" x="304" y="68" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="1qY-We-iVZ"/>
                                     <constraint firstAttribute="width" constant="90" id="uRP-Aa-L6F"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DescripLb" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRx-9A-emL">
+                                <rect key="frame" x="304" y="174" width="90" height="28"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CityLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DaT-6G-bbr">
                                 <rect key="frame" x="20" y="84" width="186" height="31"/>
                                 <constraints>
@@ -49,7 +55,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vyL-wI-y1M">
-                                <rect key="frame" x="20" y="633" width="374" height="164"/>
+                                <rect key="frame" x="20" y="638" width="374" height="164"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="164" id="ALt-Vb-N8F"/>
@@ -68,8 +74,15 @@
                                             <rect key="frame" x="0.0" y="0.0" width="188" height="147.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="WDForecastLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21d-l3-GCv">
-                                                    <rect key="frame" x="20" y="20" width="148" height="23.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Monday" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21d-l3-GCv">
+                                                    <rect key="frame" x="20" y="20" width="148" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nov 12.20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbR-jN-f6e">
+                                                    <rect key="frame" x="36" y="46.5" width="116" height="24"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -107,13 +120,6 @@
                                                     <rect key="frame" x="12" y="87.5" width="56" height="52"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nov 12.20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbR-jN-f6e">
-                                                    <rect key="frame" x="36" y="47" width="116" height="24"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="0.15921982020547945" colorSpace="custom" customColorSpace="sRGB"/>
@@ -128,17 +134,12 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DescrLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRx-9A-emL">
-                                <rect key="frame" x="304" y="174" width="90" height="27.5"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <constraints>
                             <constraint firstItem="vyL-wI-y1M" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-20" id="2P7-zN-Svv"/>
                             <constraint firstItem="feP-hA-YU6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7tz-UG-ar2"/>
+                            <constraint firstAttribute="bottom" secondItem="vyL-wI-y1M" secondAttribute="bottom" constant="8" id="8SR-wf-w9b"/>
                             <constraint firstAttribute="bottom" secondItem="feP-hA-YU6" secondAttribute="bottom" id="8WC-q3-5fa"/>
                             <constraint firstItem="vyL-wI-y1M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Gt1-BS-wr9"/>
                             <constraint firstItem="DaT-6G-bbr" firstAttribute="trailing" secondItem="bid-ZP-nRO" secondAttribute="trailing" id="K7a-U0-AGd"/>
@@ -150,21 +151,37 @@
                             <constraint firstItem="QlD-gf-LTg" firstAttribute="top" secondItem="bid-ZP-nRO" secondAttribute="bottom" constant="23.5" id="eE6-j8-aez"/>
                             <constraint firstItem="vyL-wI-y1M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="es5-tC-qid"/>
                             <constraint firstItem="SRx-9A-emL" firstAttribute="trailing" secondItem="vyL-wI-y1M" secondAttribute="trailing" id="kLi-df-b2G"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vyL-wI-y1M" secondAttribute="bottom" constant="60" id="khH-av-h5z"/>
                             <constraint firstItem="0Pg-33-5iI" firstAttribute="leading" secondItem="SRx-9A-emL" secondAttribute="leading" id="oJV-oc-c8j"/>
                             <constraint firstItem="feP-hA-YU6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="q5V-r5-e46"/>
                             <constraint firstItem="SRx-9A-emL" firstAttribute="top" secondItem="0Pg-33-5iI" secondAttribute="bottom" constant="16" id="rOJ-7y-gAb"/>
                             <constraint firstItem="DaT-6G-bbr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="uwz-Ld-IkJ"/>
                             <constraint firstItem="QlD-gf-LTg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vK9-LY-hpc"/>
                             <constraint firstItem="feP-hA-YU6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="waU-ad-xVK"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vyL-wI-y1M" secondAttribute="bottom" constant="65" id="xhY-uQ-2vt"/>
                             <constraint firstItem="SRx-9A-emL" firstAttribute="centerX" secondItem="0Pg-33-5iI" secondAttribute="centerX" id="ylU-FT-Haf"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="khH-av-h5z"/>
+                                <exclude reference="8SR-wf-w9b"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="8SR-wf-w9b"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular">
+                            <mask key="constraints">
+                                <include reference="khH-av-h5z"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
-                        <outlet property="WeekDayLabel" destination="bid-ZP-nRO" id="r23-ae-w4v"/>
                         <outlet property="backgroundView" destination="feP-hA-YU6" id="4nY-gQ-eJF"/>
                         <outlet property="cityLabel" destination="DaT-6G-bbr" id="083-YJ-lHQ"/>
                         <outlet property="collectionView" destination="vyL-wI-y1M" id="CAn-or-czs"/>
+                        <outlet property="dateLabel" destination="bid-ZP-nRO" id="TlX-ZT-FPJ"/>
                         <outlet property="descriptionLabel" destination="SRx-9A-emL" id="OpQ-cd-gAU"/>
                         <outlet property="iconView" destination="0Pg-33-5iI" id="hWs-sr-gNI"/>
                         <outlet property="tempLabel" destination="QlD-gf-LTg" id="NVS-E0-qde"/>
